--- a/api/Dockerfile
+++ b/api/Dockerfile
@@ -1,17 +1,16 @@
-# Tu Dockerfile está muy bien optimizado, aquí explico cada parte:
-
 # Imagen base: Python 3.12 en versión "slim" (más pequeña y segura)
 FROM python:3.12-slim
 
-# Variables de entorno para mejorar el comportamiento de Python en contenedores
-ENV PYTHONDONTWRITEBYTECODE=1 \    # No crear archivos .pyc (optimización)
-    PYTHONUNBUFFERED=1             # Mostrar logs en tiempo real
+# (Comentario en línea separada) No crear .pyc y sacar logs sin buffer (útil en contenedores)
+# OJO: no pongas comentarios en las mismas líneas que terminan con "\".
+ENV PYTHONDONTWRITEBYTECODE=1 \
+    PYTHONUNBUFFERED=1
 
-# Instalar herramientas del sistema que necesitamos
+# Instalar herramientas del sistema necesarias
 # --no-install-recommends: solo instala lo esencial (imagen más pequeña)
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    curl ca-certificates && \
-    rm -rf /var/lib/apt/lists/*    # Limpiar caché para reducir tamaño
+    curl ca-certificates \
+ && rm -rf /var/lib/apt/lists/*
 
 # SEGURIDAD: Crear usuario sin privilegios de administrador
 RUN useradd -m appuser
@@ -19,20 +18,22 @@ RUN useradd -m appuser
 # Directorio donde vivirá nuestra aplicación
 WORKDIR /app
 
-# Instalar dependencias Python ANTES de copiar el código
-# Esto aprovecha la caché de Docker: si requirements.txt no cambia, no reinstala
+# Instalar dependencias Python ANTES de copiar el código (mejor cache de capas)
+# Asegúrate de que "requirements.txt" está en la misma carpeta que este Dockerfile (api/requirements.txt).
 COPY requirements.txt .
 RUN pip install --no-cache-dir -r requirements.txt
 
-# Copiar nuestro código al contenedor
+# Copiar el código de la app (asumiendo estructura api/app/*)
 COPY app ./app
 
-# Puerto que usará la aplicación (Cloud Run detecta automáticamente PORT)
+# Puerto por defecto (Cloud Run puede sobreescribir PORT)
 ENV PORT=8000
 
-# SEGURIDAD: Cambiar al usuario sin privilegios
+# (Opcional) Asegurar ownership de /app si tu app escribe algo
+# RUN chown -R appuser:appuser /app
+
+# Ejecutar como usuario sin privilegios
 USER appuser
 
-# Comando que ejecuta la aplicación
-# uvicorn es el servidor ASGI para FastAPI
+# Comando de arranque: ajusta "app.main:app" si tu módulo es distinto
 CMD exec uvicorn app.main:app --host 0.0.0.0 --port ${PORT}
